--- a/index.html
+++ b/index.html
@@ -5,6 +5,323 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div class="main colorRed">
+	<!-- Header -->
+	<div class="header fullwidth" style="height: 80px;">
+		<div class="name colorRed fullHeight displayInline" style="width: calc(30% - 50px)">
+			<div><b>Social</b>Network</div>
+		</div>
+		<div class="find colorWhite displayInline" style="height: 75%; width: calc(40% - 25px)">
+			<div>Find..</div>
+		</div>
+		<div class="upload colorWhite displayInline" style="height: 75%; width: calc(15% - 25px)">
+			<div>Upload</div>
+		</div>
+		<div class="profil colorWhite displayInline" style="height: 75%; width: calc(15% - 50px);">
+			<img src="1.png"  width="42%" height="100%">
+			<div class="displayInline colorRed" style="width:57%;height: 100%; float: right;">
+				<div style="font-size: 22px; padding-left: 8px;"><b>Waseem</b><br>Arshad</div>
+			</div>
+		</div>	    
+	</div>
+	<!-- Navigations -->
+	<div class="navigations fullwidth" style="height: 60px;">
+	<br>
+		<div class="colorRed  displayInline" style="width: calc(7% - 15px); height: 35px;"><h3>Videos</h3></div>
+		<div class="colorRed  displayInline" style="width: calc(3% - 10px); height: 35px;"><h3>/</h3></div>
+		<div class="colorRed  displayInline" style="width: calc(7% - 15px); height: 35px;"><h3>Peoples</h3></div>
+		<div class="colorRed  displayInline" style="width: calc(3% - 10px); height: 35px;"><h3>/</h3></div>
+		<div class="colorRed  displayInline" style="width: calc(9% - 15px); height: 35px;"><h3>Documents</h3></div>
+		<div class="colorRed  displayInline" style="width: calc(3% - 10px); height: 35px;"><h3>/</h3></div>
+		<div class="colorRed  displayInline" style="width: calc(7% - 15px); height: 35px;"><h3>Events</h3></div>
+		<div class="colorRed  displayInline" style="width: calc(3% - 10px); height: 35px;"><h3>/</h3></div>
+		<div class="colorRed  displayInline" style="width: calc(10% - 15px); height: 35px;"><h3>Communities</h3></div>
+		<div class="colorRed  displayInline" style="width: calc(3% - 10px); height: 35px;"><h3>/</h3></div>
+		<div class="colorRed  displayInline" style="width: calc(7% - 15px); height: 35px;"><h3>Favorites</h3></div>
+		<div class="colorRed  displayInline" style="width: calc(3% - 10px); height: 35px;"><h3>/</h3></div>
+		<div class="colorRed  displayInline" style="width: calc(7% - 15px); height: 35px;"><h3>Channels</h3></div>
+		<div><hr style="border-bottom-color: rgb(252,241,207);"></div>
+	</div>
+	<!-- ContentA=>>>Videos,People,Documents -->
+	<div class="content">
+	<br>
+		<!-- Left of Content -->
+		<div class="contentLeft floatLeft">
+			<div class="videos">
+				<div class="videosLeft floatLeft ">
+					<div class="videosLeftFirst colorRed">
+						<h1>Videos</h1>
+						<p>Browse all videos</p>
+					</div>
+					<div class="videosLeftSecond colorWhite">
+						<div style="height: 400px;"></div>
+						<div class="floatLeft"  style="padding: 3px;">
+							<h1>How to Improve your skills</h1>
+							<p>Waseem Arshad</p>
+						</div>
+						<div class="floatRight" style="padding: 3px;">
+							<p>187887 views</p>
+						</div>
+					</div>
+					<div class="videosLeftThird clearBoth">
+						<div class="floatLeft colorWhite">
+							<div style="height: 200px;"></div>
+							<div style="padding: 6px;">
+								<p>John Stainior</p>
+								<p style="margin-left: 170px;">2334 views</p>
+							</div>
+						</div>
+						<div class="floatRight colorWhite">
+							<div style="height: 200px;"></div>
+							<div style="padding: 6px;">
+								<p>John Doe</p>
+								<p style="margin-left: 192px;">2334 views</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="videosRight floatRight colorRed">
+						<div class="videosRightFirst colorWhite">
+							<div style="height: 193.5px;"></div>
+							<div style="padding: 6px; height: 10px;">
+								<p>Michael Kelif</p>
+								<p style="margin-left: 163px;">15954 views</p>
+							</div>
+						</div>
+						<div class="videosRightSecond colorWhite">
+							<div style="height: 193.5px;"></div>
+							<div style="padding: 6px; height: 10px;">
+								<p>Ahmed Yasin</p>
+								<p style="margin-left: 173px;">1984 views</p>
+							</div>
+						</div>	
+						<div class="videosRightThird colorRed">
+							<div style="height: 221px;">
+								<p>Upload Your Own Video</p>
+							</div>
+						</div>										
+				</div>
+			</div>
+			<br>
+			<div class="people">
+				<div class="peopleLeft floatLeft ">
+					<div class="peopleLeftFirst colorRed">
+						<h1>People</h1>
+						<p>View all</p>
+					</div>
+					<div class="peopleLeftSecond colorWhite">
+						<div style="height: 400px;"></div>
+						<div class="floatLeft"  style="padding: 3px;">
+							<h1>Waseem Arshad</h1>
+							<p>User interface designer</p>
+						</div>
+						<div class="floatRight" style="padding: 3px;">
+							<p>187887 views</p>
+						</div>
+					</div>
+					<div class="peopleLeftThird clearBoth">
+						<div class="floatLeft colorWhite">
+							<div style="height: 200px;"></div>
+							<div style="padding: 6px;">
+								<p>John Stainior</p>
+
+							</div>
+						</div>
+						<div class="floatRight colorWhite">
+							<div style="height: 200px;"></div>
+							<div style="padding: 6px;">
+								<p>John Doe</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="peopleRight floatRight">
+						<div class="peopleRightFirst colorWhite">
+							<div style="height: 193.5px;"></div>
+							<div style="padding: 6px; height: 10px;">
+								<p>John Stainior</p>
+							</div>
+						</div>
+						<div class="peopleRightSecond colorWhite">
+							<div style="height: 193.5px;"></div>
+							<div style="padding: 6px; height: 10px;">
+								<p>John Stainior</p>
+							</div>
+						</div>	
+						<div class="peopleRightThird colorRed">
+							<div style= height: 226px;">
+								<p>Show Your Work</p>
+							</div>
+						</div>										
+				</div>				
+			</div>
+			<div class="documents">
+				<div class="documentsLeft floatLeft ">
+					<div class="documentsLeftFirst colorRed">
+						<br>
+						<h1>Documents</h1>
+						<p>Browse All Documents</p>
+					</div>
+					<div class="documentsLeftSecond colorWhite">
+						<div style="height: 400px;"></div>
+						<div class="floatLeft"  style="padding: 3px;">
+							<h1>Mobile ui &#38 ux Guide 2013</h1>
+							<p>By William Makheja</p>
+						</div>
+						<div class="floatRight" style="padding: 3px;">
+							<p>187887 views</p>
+						</div>
+					</div>
+					<div class="documentsLeftThird clearBoth">
+						<div class="floatLeft colorWhite">
+							<div style="height: 174px;"></div>
+							<div style="padding: 6px;">
+								<h1>2013 Marketing Trends</h1>
+							    <p>207817 views</p>
+
+							</div>
+						</div>
+						<div class="floatRight colorWhite">
+							<div style="height: 174px;"></div>
+							<div style="padding: 6px;">
+								<h1>2013 Marketing Trends</h1>
+								<p>207817 views</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="documentsRight floatRight">
+						<div class="documentsRightFirst colorWhite">
+							<div style="height: 174px;"></div>
+							<div style="padding: 6px; height: 30px;">
+								<h1>HTML 5 and usage</h1>
+								<p>179563 views</p>								
+							</div>
+						</div>
+						<div class="documentsRightSecond colorWhite">
+							<div style="height: 174px;"></div>
+							<div style="padding: 6px; height: 30px;">
+								<h1>How to become an expert?</h1>
+								<p>97855 views</p>
+							</div>
+						</div>	
+						<div class="documentsRightThird colorRed">
+							<div style="height: 218px;">
+								<p>Show Your Document</p>
+							</div>
+						</div>										
+				</div>							
+			</div>
+		</div>
+		<!-- Right of Content -->
+		<div class="contentRight floatRight">
+			<div class="activity colorRed">
+				<div class="activityFirst colorRed">
+					<h1>Activity</h1>
+					<p>View Timeline / Filter Activities</p>
+				</div>
+				<div class="activitySecond">
+					<div class="activity01">
+						<div class="activityLeft floatLeft colorWhite"></div>
+						<div class="activityRight floatRight">
+							<p><b>John Stainior</b> commented</p>
+							<p>Well, I am liking it how it captures ...</p>
+							<p>2 seconds ago</p>
+						</div>
+					</div>
+					<div class="activity02 clearBoth">
+						<div class="activityLeft floatLeft colorWhite"></div>
+						<div class="activityRight floatRight">
+							<p><b>John Stainior</b> added a new video</p>
+							<p>Creative people must follow these guidelin..</p>
+							<p>5 minutes ago</p>
+						</div>
+					</div>
+ 					<div class="activity03 clearBoth">
+						<div class="activityLeft floatLeft colorWhite"></div>
+						<div class="activityRight floatRight">
+							<p><b>John Stainior</b> shared a document</p>
+							<p>"How to become an expert"</p>
+							<p>1 day ago</p>
+						</div>
+					</div>
+					<div class="activity04 clearBoth">
+						<div class="activityLeft floatLeft colorWhite"></div>
+						<div class="activityRight floatRight">
+							<p><b>Arjun</b> unlocked new badge</p>
+							<p>Social Guru</p>
+							<p>44 minutes ago</p>
+						</div>
+					</div>
+					<div class="activity05 clearBoth">
+						<div class="activityLeft floatLeft colorWhite"></div>
+						<div class="activityRight floatRight">
+							<p><b>Micheal</b> uploaded a new video</p>
+							<p>How do I start a website design project</p>
+							<p>1 hour ago</p>
+						</div>
+					</div>
+					<div class="activity06 clearBoth">
+						<div class="activityLeft floatLeft colorWhite"></div>
+						<div class="activityRight floatRight">
+							<p><b>John Stainior</b> liked a video</p>
+							<p>Some marketing tricks</p>
+							<p>19 minutes ago</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="channels">
+				<div class="channelsFirst colorRed">
+					<h1>Channels</h1>
+					<p>Browse all channels</p>
+				</div>
+				<div class="channelsSecond">
+					<div class="channelsSecondLeft floatLeft">
+						<div class="colorWhite"><p>Google</p></div>
+						<div class="colorWhite"><p>Microsoft</p></div>
+						<div class="colorWhite"><p>Weather Channel</p></div>
+						<div class="colorWhite"><p>iMedia</p></div>
+						<div class="colorWhite"><p>Khan Studios</p></div>
+					</div>
+					<div class="channelsSecondRight floatRight" >
+						<div class="colorWhite"><p>Dribble</p></div>
+						<div class="colorWhite"><p>Behance</p></div>
+						<div class="colorWhite"><p>Gurus</p></div>
+						<div class="colorWhite"><p>Creativeye</p></div>
+						<div class="colorWhite"><p>Yahoo</p></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="clearBoth"></div>
+	<div class="footer colorRed">
+		<div class="footerFirst">
+			<img src="t.png">
+			<img src="l.png">
+			<img src="f.png">
+		</div>
+		<div class="footerSecond">
+			<div class="colorRed  displayInline" style="margin-left: -29px;"><p>About</p></div>
+			<div class="colorRed  displayInline" style="width: 30px;"><p>/</p></div>
+			<div class="colorRed  displayInline"><p>For Business</p></div>
+			<div class="colorRed  displayInline" style="width: 30px;"><p>/</p></div>
+			<div class="colorRed  displayInline"><p>Suggestions</p></div>
+			<div class="colorRed  displayInline" style="width: 30px;"><p>/</p></div>
+			<div class="colorRed  displayInline"><p>Events</p></div>
+			<div class="colorRed  displayInline" style="width: 30px;"><p>/</p></div>
+			<div class="colorRed  displayInline"><p>Help and FAQs</p></div>
+			<div class="colorRed  displayInline" style="width: 30px;"><p>/</p></div>
+			<div class="colorRed  displayInline"><p>Contacts</p></div>
+			<div class="colorRed  displayInline" style="width: 30px;"><p>/</p></div>
+			<div class="colorRed  displayInline"><p>Pricing</p></div>
+		</div>
+		<div class="footerThird">
+			<p>&#169 Copyright 2013 companyname inc</p>
+			<p>Privacy  /  Terms</p>
+		</div>
+	</div>
 
 </body>
 </html>
