--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 							</div>
 						</div>	
 						<div class="peopleRightThird colorRed">
-							<div style= height: 226px;">
+							<div style= "height: 226px;">
 								<p>Show Your Work</p>
 							</div>
 						</div>										
